--- a/en/body.html
+++ b/en/body.html
@@ -1,6 +1,5 @@
 <img
-  src="https://images.unsplash.com/photo-1654595510800-035b282b71f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
-  alt="A hand holding Flower"
+  src="https://images.unsplash.com/photo-1654595510800-035b282b71f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="A hand holding Flower"
 />
 
 <p>
