--- a/en/body.html
+++ b/en/body.html
@@ -1,27 +1,24 @@
-<p>
-  WYSIWYG is an acronym for &quot;<strong>what you see is what you get</strong
-  >&quot;.
-</p>
+<img
+  src="https://images.unsplash.com/photo-1654595510800-035b282b71f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
+  alt="A hand holding Flower"
+/>
+
+<p>WYSIWYG is an acronym for <strong>what you see is what you get</strong>.</p>
 
 <p><code>public class Main </code></p>
 
 <p>
   <code
-    >{ public static void main(String[] args) { System.out.println(&quot;Hello
-    World&quot;); } }</code
+    >{ public static void main(String[] args) { System.out.println(Hello World);
+    } }</code
   >
 </p>
 
 <blockquote>
-  <p>
-    &ldquo;Gentlemen, you can&rsquo;t fight in here. This is the war
-    room.&rdquo;
-  </p>
+  <p>Gentlemen, you can't fight in here. This is the war room.;</p>
 
   <p>
-    &mdash;President Merkin Muffley (Peter Sellers),&nbsp;<em
-      >Dr. Strangelove</em
-    >
+    - President Merkin Muffley (Peter Sellers),<em>Dr. Strangelove</em>
   </p>
 </blockquote>
 
@@ -45,7 +42,7 @@
   </li>
 </ul>
 
-<p>Top programming languages, in which, I can print &quot;Hello World&quot;:</p>
+<p>Top programming languages, in which, I can print Hello World:</p>
 
 <ol>
   <li>
@@ -101,7 +98,7 @@
             href="https://en.wikipedia.org/wiki/Shinji_Takamatsu"
             rel="noopener noreferrer"
             >Shinji Takamatsu</a
-          >,&nbsp;<a
+          >,<a
             href="https://en.wikipedia.org/wiki/Yoichi_Fujita"
             rel="noopener noreferrer"
             >Yoichi Fujita</a
