--- a/en/correction.html
+++ b/en/correction.html
@@ -1,7 +1,7 @@
-<img
+<!-- <img
   src="https://images.unsplash.com/photo-1654595510800-035b282b71f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
   alt="A hand holding Flower"
-/>
+/> -->
 <p>WYSIWYG is an acronym for <strong>what you see is what you get</strong>.</p>
 
 <p><code>public class Main </code></p>
